--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="container">
         <div class="content-wrapper">
 
-            <h2> Branding Guidelines HOLA </h2>
+            <h2> Branding Guidelines </h2>
 
             <p> Welcome to the DailySmarty branding guidelines! We’re happy that you see 
                 the worth of our product and understand the value in promoting it correctly.</p> 
